# fastapi-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
scripts/: add_external_service.py  add_feature.py
